<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:paddingTop="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/admin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/access_to_sections" />

    <View android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/gray"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_visible_section_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_list" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_visible_section_works"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_work" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/is_visible_section_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_time" />

<!--    <android.widget.Button-->
<!--        android:id="@+id/user_save"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:background="@drawable/buttons_main"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/save" />-->

<!--    <android.widget.Button-->
<!--        android:id="@+id/user_delete"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/buttons_white"-->
<!--        android:textColor="@color/black"-->
<!--        android:text="@string/delete" />-->
</LinearLayout>
