<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/item_border" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="5"
        android:text="@string/name" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_weight="3"
        android:text="@string/change_balance" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_weight="3"
        android:text="@string/repair_balance" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_weight="3"
        android:text="@string/date_change" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="10dp"
        android:fontFamily="@font/montserrat"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_weight="3"
        android:text="@string/date_repair" />

</LinearLayout>
