<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/item_border" >

    <TextView
        android:id="@+id/recycler_detail_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/date" />

    <TextView
        android:id="@+id/recycler_detail_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/air_h" />

    <TextView
        android:id="@+id/recycler_detail_global_balance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/earth_h" />

</LinearLayout>
