<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/item_border" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/login" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/email" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="10dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_weight="2"
        android:text="@string/role" />
</LinearLayout>
